renamed libraries from "CommonLib_*" to "JavaLib_Common_*"

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CommonLib_Dialogs</name>
+	<name>JavaLib_Common_Dialogs</name>
 	<comment></comment>
 	<projects>
 	</projects>
